--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "start-dev": "nodemon server/server.js",
     "start": "node server/server.js"
   },
+  "engines": {
+    "node": "6.7.0"
+  },
   "author": "Ossaija ThankGod",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
