--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon exec \"npm test\"",
     "start-dev": "nodemon server/server.js",
     "start": "node server/server.js"
   },
@@ -18,6 +19,8 @@
     "socket.io": "^1.7.2"
   },
   "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0"
   }
 }
