--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon exec \"npm test\"",
+    "test-watch": "nodemon --exec \"npm test\"",
     "start-dev": "nodemon server/server.js",
     "start": "node server/server.js"
   },
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
+    "moment": "^2.17.1",
     "socket.io": "^1.7.2"
   },
   "devDependencies": {
